fix z-index

--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ ul {
 
 .project-card__title {
   padding-bottom: 16px;
+  z-index: 1;
 }
 
 .project-card__button {
@@ -201,6 +202,7 @@ ul {
   text-align: center;
   border-radius: 6px;
   box-shadow: 0px 2px 0px 0px #ce1c3e;
+  z-index: 1;
 }
 
 .project-card__img {
@@ -210,7 +212,7 @@ ul {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1;
+
 }
 
 .project-card__overlay {
@@ -224,7 +226,7 @@ ul {
     rgba(196, 196, 196, 0) 35.34%,
     #213e60 99.85%
   );
-  z-index: -1;
+
 }
 
 /* Галерея */
